# fast-music-remover

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.json  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  improvement-request.md
.github/workflows/: build-mediaprocessor.yml  build_and_publish_docker_image.yml  build_test_and_format_core.yml  clang-format_check.yml  format_backend.yml  pep8-check.yml
MediaProcessor/: CMakeLists.txt
MediaProcessor/cmake/: src.cmake  test.cmake
MediaProcessor/include/: SpeechIsolation.h  ThreadPool.h  Utils.h  VideoProcessing.h
MediaProcessor/res/DeepFilterNet3_ll_onnx/tmp/export/: config.ini
MediaProcessor/src/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  CommandBuilder.cpp  CommandBuilder.h  ConfigManager.cpp  ConfigManager.h  DeepFilterCommandBuilder.cpp  DeepFilterCommandBuilder.h  DeepFilterNetFFI.h  Engine.cpp  Engine.h  FFmpegCommandBuilder.cpp  FFmpegCommandBuilder.h  FFmpegConfigManager.cpp  FFmpegConfigManager.h  FFmpegController.cpp  FFmpegController.h  FFmpegControllerBuilder.cpp  FFmpegControllerBuilder.h  FFmpegSettingsManager.cpp  FFmpegSettingsManager.h  HardwareUtils.cpp  HardwareUtils.h  ICommandBuilder.h  MediaProcessor.cpp  MediaProcessor.h  Processor.cpp  Processor.h  SpeechIsolation.cpp  Utils.cpp  Utils.h  VideoProcessing.cpp  VideoProcessor.cpp  VideoProcessor.h  VocalProcessor.cpp  VocalProcessor.h  main.cpp
MediaProcessor/tests/: AudioProcessorTester.cpp  CMakeLists.txt  CommandBuilderTester.cpp  ConfigFileCreator.cpp  ConfigFileCreator.h  ConfigManagerTester.cpp  FFmpegControllerTester.cpp  TestUtils.cpp  TestUtils.h  UtilsTester.cpp  VideoProcessorTester.cpp  testUtils.cpp  testUtils.h
MediaProcessor/tests/TestMedia/: test_video.mkv
backend/: app.py  media_handler.py  response_handler.py  utils.py
backend/tests/: README.md  test_media_handler.py  test_response_handler.py  test_utils.py  utils.py
backend/tests/Media/: 2_Second_Video.webm  test.webm
media_processor/: CMakeLists.txt
media_processor/include/: SpeechIsolation.h  VideoProcessing.h
media_processor/src/: SpeechIsolation.cpp  VideoProcessing.cpp  main.cpp
static/css/: style.css
static/js/: scripts.js
templates/: index.html
tests/: response_handler.py  test_media_handler.py  test_utils.py
